# matrix-ui

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  DEVELOPMENT.md  DEV_SETUP_SUMMARY.md  GUI_FRAMEWORK_COMPARISON.md  IMPLEMENTATION_SKETCH.md  Makefile  README.md  SCAFFOLDING_COMPLETE.md  SCAFFOLDING_PLAN.md  biome.json  flake.nix  package-lock.json  package.json  tauri.conf.json  test-dev-env.sh
src/: desktop.rs  main.rs  matrix.rs  ui.rs
